Segfault when attempting to escape from bone translation #41075

Closed
opened 2014-07-15 03:10:31 +02:00 by Sean Olson · 9 comments
Member

System Information
Linux 14.10, Nvidia Geforce 650 Ti

Blender Version
Broken: (example: 2.71 50d3014, see splash screen)
Worked: (optional)

Segfault when attempting to escape from bone translation

Exact steps for others to reproduce the error

  1. Open Beastmaster.blend
  2. In Editmode of the armature, select Bone.001's head.
  3. Translate the bone head, but DO NOT confirm translation
  4. Hit esc button to escape the translation.
  5. Note segfault.

beastmaster.crash.txt

**System Information** Linux 14.10, Nvidia Geforce 650 Ti **Blender Version** Broken: (example: 2.71 50d3014, see splash screen) Worked: (optional) Segfault when attempting to escape from bone translation **Exact steps for others to reproduce the error** 1. Open Beastmaster.blend 2. In Editmode of the armature, select Bone.001's head. 3. Translate the bone head, but DO NOT confirm translation 4. Hit esc button to escape the translation. 5. Note segfault. [beastmaster.crash.txt](https://archive.blender.org/developer/F97850/beastmaster.crash.txt)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @liquidape

Added subscriber: @liquidape
Author
Member

beastmaster.blend Added beastmaster.blend

[beastmaster.blend](https://archive.blender.org/developer/F97851/beastmaster.blend) Added beastmaster.blend

Added subscriber: @Sergey

Added subscriber: @Sergey
Bastien Montagne was assigned by Sergey Sharybin 2014-07-15 08:04:30 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

@mont29, mind having a look? All this edit bones, sync and so.. Thanks! :)

@mont29, mind having a look? All this edit bones, sync and so.. Thanks! :)

This issue was referenced by 57a3403bc0

This issue was referenced by 57a3403bc08d71d851cbded1c08913f0402d994c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 57a3403bc0.

Closed by commit 57a3403bc0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41075
No description provided.