Fix T41075: Segfault when attempting to escape from bone translation.

Minor logical error in rBb617d6d5 ;)