source/blender/editors/transform/transform_conversions.c
@@ -1279,7 +1279,7 @@ static void createTransArmatureVerts(TransInfo *t)
 		}
 	}
 
-	if (mirror && total_mirrored) {
+	if (mirror) {
 		/* trick to terminate iteration */
 		bid[total_mirrored].bone = NULL;
 	}
